feature: add request handling statistics for pouch daemon
