# apis/types/response_stats.go
@@ -1,0 +1,67 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package types
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	strfmt "github.com/go-openapi/strfmt"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/swag"
+)
+
+// ResponseStats ResponseStats contains all request handling result in daemon including 2xx3xx response number, 4xx and 5xx number.
+// swagger:model ResponseStats
+
+type ResponseStats struct {
+
+	// all requests number handled by daemon no matter success or failure.
+	AllRequests uint64 `json:"AllRequests,omitempty"`
+
+	// all response number returned by daemon which is 4xx status code.
+	Req4xxCount uint64 `json:"Req4xxCount,omitempty"`
+
+	// all response number returned by daemon which is 5xx status code.
+	Req5xxCount uint64 `json:"Req5xxCount,omitempty"`
+
+	// all response number returned by daemon which is 2xx or 3xx status code.
+	Req2xx3xxCount uint64 `json:"req2xx3xxCount,omitempty"`
+}
+
+/* polymorph ResponseStats AllRequests false */
+
+/* polymorph ResponseStats Req4xxCount false */
+
+/* polymorph ResponseStats Req5xxCount false */
+
+/* polymorph ResponseStats req2xx3xxCount false */
+
+// Validate validates this response stats
+func (m *ResponseStats) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *ResponseStats) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *ResponseStats) UnmarshalBinary(b []byte) error {
+	var res ResponseStats
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
